Spostate le chiamate per in un'altra activity

--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -268,8 +268,8 @@
                         android:layout_centerInParent="true"
                         android:layout_toEndOf="@id/linear_positivi"
                         android:id="@+id/animationViewUpPositive"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
                         app:lottie_fileName="arrow_up_red.json"
                         app:lottie_autoPlay="true"
                         app:lottie_loop="true"/>
@@ -338,6 +338,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content">
                             <ImageView
+                                android:id="@+id/img_graph_choise"
                                 android:layout_margin="4dp"
                                 android:padding="3dp"
                                 android:background="@drawable/button_rounded_colored"
