--- a/app/src/main/res/layout/custom_dialog_layout.xml
+++ b/app/src/main/res/layout/custom_dialog_layout.xml
@@ -15,6 +15,16 @@
         android:background="@drawable/layout_rounded_white"
         android:padding="@dimen/single_and_half_margin">
 
+        <ImageView
+            android:id="@+id/ic_close"
+            android:src="@drawable/ic_round_close_24"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"></ImageView>
 
         <ImageView
             android:id="@+id/image"
