--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -76,7 +76,7 @@
 
                 android:layout_width="0dp"
                 android:layout_height="40dp"
-
+                android:id="@+id/btn_all"
                 android:layout_weight="3"
                 android:background="@drawable/button_rounded_colored"
                 android:fontFamily="@font/poppins_bold"
@@ -86,6 +86,7 @@
                 android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_month"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginLeft="10dp"
@@ -99,6 +100,7 @@
                 android:textStyle="bold"></androidx.appcompat.widget.AppCompatButton>
 
             <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_week"
                 android:layout_width="0dp"
                 android:layout_height="40dp"
                 android:layout_marginRight="10dp"
@@ -335,7 +337,7 @@
                                 android:layout_centerVertical="true"
                                 android:textColor="@color/grey_700"
                                 android:fontFamily="@font/poppins_bold"
-
+                                android:id="@+id/txt_type_graph"
                                 android:text="Grafico su percentuale"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"></TextView>
